# ebench

./: .gitignore  CMakeLists.txt  README.md
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt
src/apps/benchmark/: CMakeLists.txt  aunteater_bench.h  main.cpp
src/ecs/aunteaterv1/aunteaterv1/: CMakeLists.txt  conanfile.py  main.cpp
src/ecs/entity/entity/: CMakeLists.txt  conanfile.py  main.cpp
src/ecs/flecs/flecs/: CMakeLists.txt  conanfile.py  main.cpp
src/libs/aunteater/aunteater/: CMakeLists.txt  Engine.cpp  Engine.h  Entity.h  Family.cpp  Family.h  FamilyHelp.h  FamilyPoly.h  System.h  UpdateTiming.h  globals.h  templating.h
src/libs/aunteaterAdapter/aunteaterAdapter/: CMakeFinds.cmake.in  CMakeLists.txt  model.cpp  model.h  world.cpp  world.h
src/libs/ebench/ebench/: CMakeFinds.cmake.in  CMakeLists.txt  aunteater.h  bench.cpp  bench.h
src/libs/entityAdapter/entityAdapter/: CMakeFinds.cmake.in  CMakeLists.txt  model.cpp  model.h  world.cpp  world.h
src/libs/flecsAdapter/flecsAdapter/: CMakeFinds.cmake.in  CMakeLists.txt  model.h  world.cpp  world.h
